# V5

./: README.md
V5/wev1/: .anjuta_sym_db.db  Makefile  Makefile.am  Makefile.in  Makefile~  aclocal.m4  choose_graph_image.c  choose_graph_image.c~  config.h  config.status  configure  configure.ac  libtool  myDB.db  profileQns.sxc  profileQns1.csv  profileQns1.xlsx  ticker.txt~
V5/wev1/.anjuta/: default.profile
V5/wev1/Demon/: .Main.c.swj  .Main.c.swk  .Main.c.swl  .Main.c.swm  .Main.c.swn  .Main.c.swo  .Main.c.swp  .SerialComPort.c.swp  MDB.c  Main.c  Main.c~  SMS_send.c~  SerialComPort.c  daemon
V5/wev1/GraphsNValues/: .~lock.DBP.csv#  BMI.csv  BODYFAT.csv  DBP.csv  DBP1.csv
V5/wev1/Images/: graph.xcf  status.xcf
V5/wev1/Sensor123/: MDB.c  Main.c  Main.h~  Makefile  Makefile~  SerialComPort.c~  serialport
V5/wev1/Sensor123.../: Main.c~  rr
V5/wev1/UIDemon/: Main.c  ProcessCSV.c  a.out
V5/wev1/autom4te.cache/: output.0  output.1  traces.0  traces.1
V5/wev1/po/: Makefile  (+1 more)
V5/wev1/src/: .goutputstream-X2PFPW  DemonRetuns.h  DemonRetuns.h~  Makefile  Makefile.am  Makefile.in  ProcessCSV.c  ProcessCSV.c~  Test1.ui  Test2.ui  Test3.ui  Test4.ui  Timer.c  Timer.c~  admin.c  admin.c~  admin.h  app_db.db  app_db1.db  blood_pressure.c  blood_pressure.c~  body_fat.c  body_fat.c~  choose_graph_image.c  choose_graph_image.c~  demon_file_ops.c  exit.c  exit.c~  first_time_profile.ui~  home (copy).ui  home.ui  keypad.c  keypad.c~  main.c  main.c~  main_test_backend.h  main_test_backend.h~  profile.c  profile.c~  qn_and_ans.c  (+28 more)
V5/wev1/src/.deps/: ProcessCSV.Po  Timer.Po  admin.Po  blood_pressure.Po  body_fat.Po  choose_graph_image.Po  demon_file_ops.Po  exit.Po  keypad.Po  main.Po  profile.Po  qn_and_ans.Po  smoking_detector.Po  summary_screen.Po  ticker.Po  weight_n_bmi.Po  windows.Po
(+82 files in other folders)
